--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM176naOyz5atKCmzEc+Oz/",
+      "authorship_tag": "ABX9TyMh325TcCFhV737/MZNawaH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -826,10 +826,10 @@
       ],
       "metadata": {
         "id": "Cn4fVcgCoZkg",
-        "outputId": "14258da6-f9b1-44d9-e70f-2e0f7bf27970",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "14258da6-f9b1-44d9-e70f-2e0f7bf27970"
       },
       "execution_count": 2,
       "outputs": [
@@ -854,11 +854,11 @@
         "c=add_num(100,150)"
       ],
       "metadata": {
-        "id": "Veen_Qz2nPgF",
-        "outputId": "0b7beb13-6dca-4371-bde7-6c06372bd719",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Veen_Qz2nPgF",
+        "outputId": "0b7beb13-6dca-4371-bde7-6c06372bd719"
       },
       "execution_count": 4,
       "outputs": [
@@ -887,11 +887,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "DDT_b0p8oMDN",
-        "outputId": "8ef2d390-0288-430e-951e-4c6d5032c8b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DDT_b0p8oMDN",
+        "outputId": "8ef2d390-0288-430e-951e-4c6d5032c8b0"
       },
       "execution_count": 14,
       "outputs": [
@@ -930,11 +930,11 @@
         ""
       ],
       "metadata": {
-        "id": "QEOCdg2ormLb",
-        "outputId": "1351f50e-f86a-45d8-f3a0-b486821b81c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QEOCdg2ormLb",
+        "outputId": "1351f50e-f86a-45d8-f3a0-b486821b81c8"
       },
       "execution_count": 29,
       "outputs": [
@@ -968,13 +968,13 @@
         "factorial(5)"
       ],
       "metadata": {
-        "id": "NqIhq2QwwLhT",
-        "outputId": "8bececd9-da85-42ad-ffd9-bb41efdbeb1f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NqIhq2QwwLhT",
+        "outputId": "45a4f400-604a-4e90-98d1-760b813cfc49"
       },
-      "execution_count": 50,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -984,7 +984,42 @@
             ]
           },
           "metadata": {},
-          "execution_count": 50
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# condition for factorial and sum by using function\n",
+        "def factorial(n):\n",
+        "  sum=0\n",
+        "  fact=1\n",
+        "  for i in range(1,6):\n",
+        "    fact=fact*i\n",
+        "    if i % 2==1:\n",
+        "     sum=fact+sum\n",
+        "  return sum\n",
+        "factorial(5)"
+      ],
+      "metadata": {
+        "id": "UbmfLgmi0rEI",
+        "outputId": "852c9e99-6004-4261-8ed3-1f38a4a20b5f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "127"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
         }
       ]
     }
