--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMh325TcCFhV737/MZNawaH",
+      "authorship_tag": "ABX9TyOYZbX8b8+fZhySQXEcErno",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -831,7 +831,7 @@
         },
         "outputId": "14258da6-f9b1-44d9-e70f-2e0f7bf27970"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -860,7 +860,7 @@
         "id": "Veen_Qz2nPgF",
         "outputId": "0b7beb13-6dca-4371-bde7-6c06372bd719"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -893,7 +893,7 @@
         "id": "DDT_b0p8oMDN",
         "outputId": "8ef2d390-0288-430e-951e-4c6d5032c8b0"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -926,8 +926,7 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -936,7 +935,7 @@
         "id": "QEOCdg2ormLb",
         "outputId": "1351f50e-f86a-45d8-f3a0-b486821b81c8"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -974,7 +973,7 @@
         "id": "NqIhq2QwwLhT",
         "outputId": "45a4f400-604a-4e90-98d1-760b813cfc49"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1009,7 +1008,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1020,6 +1019,115 @@
           },
           "metadata": {},
           "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "math.factorial(5)"
+      ],
+      "metadata": {
+        "id": "BNSiR5Zrw0lT",
+        "outputId": "6c2ae618-69d8-41a6-c43a-0d8a4a703d58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#fabonacci with function\n",
+        "def num(n):\n",
+        "\n",
+        " first_number=0\n",
+        " second_number=1\n",
+        "\n",
+        " for i in range(3,n+1):\n",
+        "  third_number=first_number+second_number\n",
+        "  first_number=second_number\n",
+        "  second_number=third_number\n",
+        " return third_number\n",
+        "\n",
+        "num(10)\n"
+      ],
+      "metadata": {
+        "id": "v6b37Co5xGIa",
+        "outputId": "bd41dc73-5b2c-4dcd-beef-d35a5e2611df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def hcf(a,b):\n",
+        "  for i in range(1,a+1):\n",
+        "    if a%i==0 and b%i==0:\n",
+        "     hcf=i\n",
+        "  print(hcf)\n",
+        "hcf(5,20)\n",
+        "hcf(20,5)\n",
+        "hcf(500,501)\n",
+        "hcf(1001,2002)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5yMgfZto3HyQ",
+        "outputId": "034edc1d-5813-461f-ac3d-d98e990c68f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5\n",
+            "1\n",
+            "1001\n"
+          ]
         }
       ]
     }
