--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOYZbX8b8+fZhySQXEcErno",
+      "authorship_tag": "ABX9TyOanlcbHUQvJsnPgBX6Pt0I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1035,7 +1035,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,26 +1068,22 @@
       ],
       "metadata": {
         "id": "v6b37Co5xGIa",
-        "outputId": "bd41dc73-5b2c-4dcd-beef-d35a5e2611df",
+        "outputId": "b09cdafd-fe90-429d-c50c-a03d1b86f0a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "5\n",
-            "8\n",
-            "13\n",
-            "21\n",
-            "34\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "34"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
         }
       ]
     },
@@ -1095,9 +1091,15 @@
       "cell_type": "code",
       "source": [
         "def hcf(a,b):\n",
-        "  for i in range(1,a+1):\n",
-        "    if a%i==0 and b%i==0:\n",
-        "     hcf=i\n",
+        "\n",
+        "  if a>b:\n",
+        "    smaller=b\n",
+        "  else:\n",
+        "    smaller=a\n",
+        "\n",
+        "  for i in range(1,smaller+1):\n",
+        "    if a % i==0 and b % i==0:\n",
+        "      hcf=i\n",
         "  print(hcf)\n",
         "hcf(5,20)\n",
         "hcf(20,5)\n",
@@ -1112,12 +1114,12 @@
       ],
       "metadata": {
         "id": "5yMgfZto3HyQ",
-        "outputId": "034edc1d-5813-461f-ac3d-d98e990c68f2",
+        "outputId": "398cafa8-980c-4ff4-9677-9aaf338093f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1127,6 +1129,43 @@
             "5\n",
             "1\n",
             "1001\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def lcm(a,b):\n",
+        "  if a>b:\n",
+        "    largest=a\n",
+        "  else:\n",
+        "    largest=b\n",
+        "  for i in range(largest,a*b+1):\n",
+        "    if i % a==0 and i % b==0:\n",
+        "      lcm=i\n",
+        "      break\n",
+        "  print(lcm)\n",
+        "lcm(20,40)\n",
+        "lcm(30,60)\n",
+        "lcm(100,150)\n"
+      ],
+      "metadata": {
+        "id": "h6SlNQ6zmy2L",
+        "outputId": "8209eab8-f97d-4b72-9c10-c52fb4a7abe6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n",
+            "60\n",
+            "300\n"
           ]
         }
       ]
