--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPDbNWWEk0s9bbPu3bQW7/B",
+      "authorship_tag": "ABX9TyNzejKVHe6xR8usuji0f0WG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -532,7 +532,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,21 +571,56 @@
       ],
       "metadata": {
         "id": "WjZ4eWLsj64s",
-        "outputId": "fd2b8d1b-be32-45ba-991d-95c77ee1b1c1",
+        "outputId": "aa5873d7-91b7-43de-c857-297573c26398",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "month:feb\n",
-            "year:2028\n",
-            " days in month_  29\n"
+            "month:may\n",
+            "year:2024\n",
+            " days in month_  31\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def num(n):\n",
+        " rev=0\n",
+        " while n>0:\n",
+        "  digit=n%10\n",
+        "  rev=rev*10+digit\n",
+        "  n=n//10\n",
+        " return rev\n",
+        "num(7894)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "CiNhcyrJ14fO",
+        "outputId": "69c85918-15a2-4119-e839-e0841e482040",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4987"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     }
