--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOanlcbHUQvJsnPgBX6Pt0I",
+      "authorship_tag": "ABX9TyPQmh9qcI+jkF1l2VCekrWT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1073,7 +1073,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1119,7 +1119,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,7 +1157,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,6 +1166,150 @@
             "40\n",
             "60\n",
             "300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def num(n):\n",
+        " rev=0\n",
+        " temporary=n\n",
+        " while n>0:\n",
+        "\n",
+        "\n",
+        "  digit=n%10\n",
+        "  n=n//10\n",
+        "  rev=rev*10+digit\n",
+        "\n",
+        "\n",
+        " print(rev)\n",
+        " if temporary==rev:\n",
+        "  print(\"pallin drome\")\n",
+        " else:\n",
+        "  print(\"no pallin drome\")\n",
+        "num(121121)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6vZdcp5J6Dxq",
+        "outputId": "635e83eb-ffa5-4a4b-8504-ff1c81489230"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "121121\n",
+            "pallin drome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pallin_drome(letter):\n",
+        "  rev=letter[::-1]\n",
+        "  if rev==letter:\n",
+        "    print(\"pallin drome\")\n",
+        "  else:\n",
+        "    print(\"no pallin drome\")\n",
+        "pallin_drome(\"aabaa\")\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vFAIPDj--96W",
+        "outputId": "5defae08-69a0-49ca-e1e1-22f4b8e94551"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pallin drome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1to 50 divisible in reverse value in def function\n",
+        "def num():\n",
+        " for i in range(50,1,-5):\n",
+        "   print(i)\n",
+        "num()\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "eT3_vO_fDwW7",
+        "outputId": "2e9ad339-7995-4e6b-9b74-9a5137ac3f95",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n",
+            "45\n",
+            "40\n",
+            "35\n",
+            "30\n",
+            "25\n",
+            "20\n",
+            "15\n",
+            "10\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1 to 100 sum divisible by 5 and 10 in def function\n",
+        "def value(n):\n",
+        " sum=0\n",
+        " for i in range(1,101):\n",
+        "  if i%5==0 and i%10==0:\n",
+        "   sum=sum+i\n",
+        " print(sum)\n",
+        "value(100)\n"
+      ],
+      "metadata": {
+        "id": "mmJnyG8CFlmu",
+        "outputId": "a113bbbe-9d65-4399-bf00-384c8142e9f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "550\n"
           ]
         }
       ]
