--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwBWmeqwwwJj4dtmU4ssjH",
+      "authorship_tag": "ABX9TyNrLtKqZpN9q/Dco8P5fQnF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1667,7 +1667,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3671,6 +3671,43 @@
             "[85, 75, 65, 58, 52]\n",
             "[52, 58, 65, 75, 85]\n",
             "[52, 58, 65, 75, 85, 76]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fact=1\n",
+        "sum=0\n",
+        "for i in range(2,31,2):\n",
+        "  sum=sum+i\n",
+        "print(sum)\n",
+        "for j in range(1,6):\n",
+        "\n",
+        "  fact=fact*j\n",
+        "\n",
+        "\n",
+        "print(fact)\n",
+        "value=sum+fact\n",
+        "print(value)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n8bY5g4-EFly",
+        "outputId": "a13bb299-d1bf-4375-a6f8-224b8ae2eac3"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "240\n",
+            "120\n",
+            "360\n"
           ]
         }
       ]
