--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQmh9qcI+jkF1l2VCekrWT",
+      "authorship_tag": "ABX9TyPSpLFeUPHii5nBsKXsE4rg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1193,8 +1193,7 @@
         "\n",
         "\n",
         "\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -1203,7 +1202,7 @@
         "id": "6vZdcp5J6Dxq",
         "outputId": "635e83eb-ffa5-4a4b-8504-ff1c81489230"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1225,8 +1224,7 @@
         "  else:\n",
         "    print(\"no pallin drome\")\n",
         "pallin_drome(\"aabaa\")\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -1235,7 +1233,7 @@
         "id": "vFAIPDj--96W",
         "outputId": "5defae08-69a0-49ca-e1e1-22f4b8e94551"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1254,8 +1252,7 @@
         " for i in range(50,1,-5):\n",
         "   print(i)\n",
         "num()\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "eT3_vO_fDwW7",
@@ -1264,7 +1261,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1303,7 +1300,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1311,6 +1308,161 @@
           "text": [
             "550\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add_value(*args):\n",
+        "  return sum(args)\n",
+        "print(add_value(20,30))\n",
+        "\n",
+        "print(add_value(12,24,36))"
+      ],
+      "metadata": {
+        "id": "pGaXRD0pJVpd",
+        "outputId": "ae0c7622-71c1-4ab6-c8c0-5ede64c3bc0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n",
+            "72\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add_value(*trt):\n",
+        "  sum=0\n",
+        "  for i in trt:\n",
+        "    sum=sum+i\n",
+        "  return sum\n",
+        "add_value(20,30)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "CaWFsUsKKOLX",
+        "outputId": "e7fc995f-2fbb-4dd5-9ff3-a197a12c1592",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "50"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#kwargs funtion positional argument\n",
+        "def add_num(**kwargs):\n",
+        "  sum=0\n",
+        "  for key,value in kwargs.items():\n",
+        "    sum=sum+value\n",
+        "  return sum\n",
+        "add_num(a=20,b=35,c=25)"
+      ],
+      "metadata": {
+        "id": "xWG8v9WELlT7",
+        "outputId": "1b6eac1a-48ca-412b-eeb0-d5d9136cedf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "80"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#reccurssion function (base case run upto the value of 0)\n",
+        "def fact(n):\n",
+        "  if n==0:\n",
+        "    return 1\n",
+        "  return n*fact(n-1)\n",
+        "fact(5)"
+      ],
+      "metadata": {
+        "id": "MfhewUGWNGGP",
+        "outputId": "af3c2cad-2256-42c4-c5bf-f0b5ac687088",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fab(n):\n",
+        "  if n==0:\n",
+        "    return 0\n",
+        "  if n==1:\n",
+        "    return 1\n",
+        "  return fab(n-1)+fab(n-2)\n",
+        "fab(10)"
+      ],
+      "metadata": {
+        "id": "i-gG4rl-PuPh",
+        "outputId": "9e36f9d6-1d28-4d34-a890-c09805347f50",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "55"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
