--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPSpLFeUPHii5nBsKXsE4rg",
+      "authorship_tag": "ABX9TyPa/+2F/05rSKoEJcls/DXA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1321,11 +1321,11 @@
         "print(add_value(12,24,36))"
       ],
       "metadata": {
-        "id": "pGaXRD0pJVpd",
-        "outputId": "ae0c7622-71c1-4ab6-c8c0-5ede64c3bc0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pGaXRD0pJVpd",
+        "outputId": "ae0c7622-71c1-4ab6-c8c0-5ede64c3bc0d"
       },
       "execution_count": 8,
       "outputs": [
@@ -1351,11 +1351,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "CaWFsUsKKOLX",
-        "outputId": "e7fc995f-2fbb-4dd5-9ff3-a197a12c1592",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CaWFsUsKKOLX",
+        "outputId": "e7fc995f-2fbb-4dd5-9ff3-a197a12c1592"
       },
       "execution_count": 5,
       "outputs": [
@@ -1383,11 +1383,11 @@
         "add_num(a=20,b=35,c=25)"
       ],
       "metadata": {
-        "id": "xWG8v9WELlT7",
-        "outputId": "1b6eac1a-48ca-412b-eeb0-d5d9136cedf0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xWG8v9WELlT7",
+        "outputId": "1b6eac1a-48ca-412b-eeb0-d5d9136cedf0"
       },
       "execution_count": 7,
       "outputs": [
@@ -1406,7 +1406,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#reccurssion function (base case run upto the value of 0)\n",
+        "#reccurssion function (base case run upto the value of 0) it works without loop\n",
         "def fact(n):\n",
         "  if n==0:\n",
         "    return 1\n",
@@ -1414,11 +1414,11 @@
         "fact(5)"
       ],
       "metadata": {
-        "id": "MfhewUGWNGGP",
-        "outputId": "af3c2cad-2256-42c4-c5bf-f0b5ac687088",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MfhewUGWNGGP",
+        "outputId": "af3c2cad-2256-42c4-c5bf-f0b5ac687088"
       },
       "execution_count": 9,
       "outputs": [
@@ -1446,11 +1446,11 @@
         "fab(10)"
       ],
       "metadata": {
-        "id": "i-gG4rl-PuPh",
-        "outputId": "9e36f9d6-1d28-4d34-a890-c09805347f50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "i-gG4rl-PuPh",
+        "outputId": "9e36f9d6-1d28-4d34-a890-c09805347f50"
       },
       "execution_count": 2,
       "outputs": [
