--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMYEM0orCED7BRSantUIPx7",
+      "authorship_tag": "ABX9TyNLl91SciWCdmIBiO01xY/Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1406,7 +1406,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#reccurssion function (base case run upto the value of 0) it works without loop\n",
+        "#recursion function (base case run upto the value of 0) it works without loop\n",
         "def fact(n):\n",
         "  if n==0:\n",
         "    return 1\n",
@@ -1431,6 +1431,36 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sum(n):\n",
+        "  if n==0:\n",
+        "    return 0\n",
+        "  return n+sum(n-1)\n",
+        "sum(10)"
+      ],
+      "metadata": {
+        "id": "QM4FA-GW7tz5",
+        "outputId": "1d6d5c10-1ec1-44ad-8a42-c89b109af220",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "55"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ]
     },
