--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrLtKqZpN9q/Dco8P5fQnF",
+      "authorship_tag": "ABX9TyNFI0OUMVa3r/cXAT1A2/rY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1015,6 +1015,137 @@
     {
       "cell_type": "code",
       "source": [
+        "num=1\n",
+        "for num in range(1,101):\n",
+        "  if num % 3==0 and num % 5==0:\n",
+        "    print(\"fizzbuzz\")\n",
+        "  elif num % 3==0:\n",
+        "    print(\"fizz\")\n",
+        "  elif num % 5==0:\n",
+        "    print(\"buzz\")\n",
+        "  else:\n",
+        "    print(num)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MuG-ujVq95jK",
+        "outputId": "b3088edc-eede-4326-a36f-ffb9089961de"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "fizz\n",
+            "4\n",
+            "buzz\n",
+            "fizz\n",
+            "7\n",
+            "8\n",
+            "fizz\n",
+            "buzz\n",
+            "11\n",
+            "fizz\n",
+            "13\n",
+            "14\n",
+            "fizzbuzz\n",
+            "16\n",
+            "17\n",
+            "fizz\n",
+            "19\n",
+            "buzz\n",
+            "fizz\n",
+            "22\n",
+            "23\n",
+            "fizz\n",
+            "buzz\n",
+            "26\n",
+            "fizz\n",
+            "28\n",
+            "29\n",
+            "fizzbuzz\n",
+            "31\n",
+            "32\n",
+            "fizz\n",
+            "34\n",
+            "buzz\n",
+            "fizz\n",
+            "37\n",
+            "38\n",
+            "fizz\n",
+            "buzz\n",
+            "41\n",
+            "fizz\n",
+            "43\n",
+            "44\n",
+            "fizzbuzz\n",
+            "46\n",
+            "47\n",
+            "fizz\n",
+            "49\n",
+            "buzz\n",
+            "fizz\n",
+            "52\n",
+            "53\n",
+            "fizz\n",
+            "buzz\n",
+            "56\n",
+            "fizz\n",
+            "58\n",
+            "59\n",
+            "fizzbuzz\n",
+            "61\n",
+            "62\n",
+            "fizz\n",
+            "64\n",
+            "buzz\n",
+            "fizz\n",
+            "67\n",
+            "68\n",
+            "fizz\n",
+            "buzz\n",
+            "71\n",
+            "fizz\n",
+            "73\n",
+            "74\n",
+            "fizzbuzz\n",
+            "76\n",
+            "77\n",
+            "fizz\n",
+            "79\n",
+            "buzz\n",
+            "fizz\n",
+            "82\n",
+            "83\n",
+            "fizz\n",
+            "buzz\n",
+            "86\n",
+            "fizz\n",
+            "88\n",
+            "89\n",
+            "fizzbuzz\n",
+            "91\n",
+            "92\n",
+            "fizz\n",
+            "94\n",
+            "buzz\n",
+            "fizz\n",
+            "97\n",
+            "98\n",
+            "fizz\n",
+            "buzz\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "gender=input(\"gender\")\n",
         "age=int(input(\"age\"))\n",
         "if gender==\"male\":\n",
@@ -1657,17 +1788,17 @@
         "  third_term=first_term+second_term\n",
         "  first_term=second_term\n",
         "  second_term=third_term\n",
-        "print(third_term)\n",
+        "  print(third_term)\n",
         "\n"
       ],
       "metadata": {
         "id": "NMau7Nprfrg0",
-        "outputId": "0ecaa1f8-1e19-4da9-c297-99ed50f86b73",
+        "outputId": "e424f15f-0ae8-47e8-e102-8d2ca03e53ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1675,6 +1806,15 @@
           "text": [
             "0\n",
             "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n",
+            "55\n",
             "89\n"
           ]
         }
@@ -1929,12 +2069,12 @@
       ],
       "metadata": {
         "id": "iNijJf5h9SFJ",
-        "outputId": "14af7774-ef94-49fa-c0ba-89625893f599",
+        "outputId": "d84c39a3-012f-4889-c994-96a72268cd99",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -3699,7 +3839,7 @@
         "id": "n8bY5g4-EFly",
         "outputId": "a13bb299-d1bf-4375-a6f8-224b8ae2eac3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
