--- a/vaishnavi.ipynb
+++ b/vaishnavi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzejKVHe6xR8usuji0f0WG",
+      "authorship_tag": "ABX9TyPDng8Zww8wTclfkI0W01qb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,7 +576,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,34 +593,70 @@
       "cell_type": "code",
       "source": [
         "def num(n):\n",
-        " rev=0\n",
-        " while n>0:\n",
-        "  digit=n%10\n",
-        "  rev=rev*10+digit\n",
-        "  n=n//10\n",
-        " return rev\n",
-        "num(7894)\n",
-        "\n",
-        "\n"
+        "  rev=0\n",
+        "  temporary=n #store the original value for comparison\n",
+        "  while n>0:\n",
+        "    digit=n%10\n",
+        "    rev=rev*10+digit\n",
+        "    n=n//10 #remove the last digit from n\n",
+        "  if temporary == rev: # compare the original number with its reverse\n",
+        "    print(\"pallin drome\")\n",
+        "  else:\n",
+        "    print(\"no pallin drome\")\n",
+        "num(1111)\n"
       ],
       "metadata": {
-        "id": "CiNhcyrJ14fO",
-        "outputId": "69c85918-15a2-4119-e839-e0841e482040",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0V-86DoxXxl1",
+        "outputId": "75c141e1-799c-402d-a2ba-869b2e2f1af1"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pallin drome\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from re import S\n",
+        "# 2!+4!+6!=?\n",
+        "def num(n):\n",
+        "  sum=0\n",
+        "  for i in range(2,n+1,2):\n",
+        "    fact=1\n",
+        "    for j in range(1,i+1):\n",
+        "      fact=fact*j\n",
+        "    sum=sum+fact\n",
+        "  print(sum)\n",
+        "num(6)\n",
+        "\n",
+        "\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "GJxS-p-XcZwt",
+        "outputId": "1f9ae41f-778d-4bca-ba1f-0643e2ce7d1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": 23,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "4987"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 16
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "746\n"
+          ]
         }
       ]
     }
